# src/index.js
@@ -39,6 +39,7 @@ function attachRoutes () {
   app.delete('/sessions', require('./web-controllers/sessions/destroy'))
   app.post('/happenings', authenticate, require('./web-controllers/happenings/create'))
   app.get('/happenings', authenticate, require('./web-controllers/happenings/index'))
+  app.put('/happenings/:id', authenticate, require('./web-controllers/happenings/update'))
   app.delete('/happenings/:id', authenticate, require('./web-controllers/happenings/remove'))
   app.get('/happenings/:happeningId/image', authenticate, require('./web-controllers/happening-images/show'))
   app.post('/happenings/:happeningId/image', authenticate, Upload.file(), require('./web-controllers/happening-images/create'))
